yaml-examples/monica/monica-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: monica
  name: monica
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: monica
